; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/misc/extr_ftdi-elan.c_ftdi_response_cancel_work.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/misc/extr_ftdi-elan.c_ftdi_response_cancel_work.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_ftdi = type { i32, i32 }

@ftdi_elan_delete = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.usb_ftdi*)* @ftdi_response_cancel_work to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ftdi_response_cancel_work(%struct.usb_ftdi* %0) #0 {
  %2 = alloca %struct.usb_ftdi*, align 8
  store %struct.usb_ftdi* %0, %struct.usb_ftdi** %2, align 8
  %3 = load %struct.usb_ftdi*, %struct.usb_ftdi** %2, align 8
  %4 = getelementptr inbounds %struct.usb_ftdi, %struct.usb_ftdi* %3, i32 0, i32 1
  %5 = call i64 @cancel_delayed_work_sync(i32* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.usb_ftdi*, %struct.usb_ftdi** %2, align 8
  %9 = getelementptr inbounds %struct.usb_ftdi, %struct.usb_ftdi* %8, i32 0, i32 0
  %10 = load i32, i32* @ftdi_elan_delete, align 4
  %11 = call i32 @kref_put(i32* %9, i32 %10)
  br label %12

12:                                               ; preds = %7, %1
  ret void
}

declare dso_local i64 @cancel_delayed_work_sync(i32*) #1

declare dso_local i32 @kref_put(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
